Address the remaining SonarCloud findings on config parsing
A missing "sha-1" configuration would have reached Class.forName with
null; %C now fails closed with a message instead. The Match parser
handles one criterion per helper call, the last "Include" literal uses
the constant, and "ClearAllForwardings" has one.